--- a/webcam.css
+++ b/webcam.css
@@ -44,3 +44,13 @@ body {
   width: auto;
 }
 
+/* (E) MIRROR EFFECT FOR FRONT CAMERA */
+.mirror {
+  transform: scaleX(-1);
+}
+
+/* (F) CAMERA ADJUSTMENTS */
+#cam-live {
+  filter: brightness(1.2) contrast(1.1);
+  transition: transform 0.2s; /* Suavizar o efeito de zoom */
+}
